--- a/assets/css/material-dashboard.css
+++ b/assets/css/material-dashboard.css
@@ -946,7 +946,7 @@ kbd {
   padding: 0.2rem 0.4rem;
   font-size: 87.5%;
   color: #ffffff;
-  background-color: #212529;
+  /* background-color: #212529; */
   border-radius: 0.2rem;
   box-shadow: inset 0 -0.1rem 0 rgba(0, 0, 0, 0.25);
 }
@@ -13266,14 +13266,14 @@ fieldset[disabled] .form-group .form-control {
 
 .navbar.bg-dark {
   color: #fff;
-  background-color: #212121 !important;
+  /* background-color: #212121 !important; */
   box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 12px -5px rgba(33, 33, 33, 0.46);
 }
 
 .navbar.bg-dark .dropdown-item:hover,
 .navbar.bg-dark .dropdown-item:focus {
   box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(33, 33, 33, 0.4);
-  background-color: #212121;
+  /* background-color: #212121; */
   color: #fff;
 }
 
@@ -13282,7 +13282,7 @@ fieldset[disabled] .form-group .form-control {
 }
 
 .navbar.navbar-transparent {
-  background-color: transparent !important;
+  /* background-color: transparent !important; */
   box-shadow: none;
 }
 
@@ -17712,16 +17712,16 @@ Copyright (c) 2015 Daniel Eden
 .ps-container.ps-active-x>.ps-scrollbar-x-rail,
 .ps-container.ps-active-y>.ps-scrollbar-y-rail {
   display: block;
-  background-color: transparent;
+  /* background-color: transparent; */
 }
 
 .ps-container.ps-in-scrolling.ps-x>.ps-scrollbar-x-rail {
-  background-color: #eee;
-  opacity: 0.9;
+  /* background-color: #eee;
+  opacity: 0.9; */
 }
 
 .ps-container.ps-in-scrolling.ps-x>.ps-scrollbar-x-rail>.ps-scrollbar-x {
-  background-color: #999;
+  /* background-color: #999; */
   height: 11px;
 }
 
